--- a/resources/sass/frontend/_variables.scss
+++ b/resources/sass/frontend/_variables.scss
@@ -27,7 +27,7 @@ $XL: 1200px;
 $color-base: #3c6fae;
 
 :root {
-    --color-base: #0f4c75;
+    --color-base: rgba(15, 76, 117, 1);
     --color-base-lighter: #dcd6f7;
     --color-variant: #3282b8;
     --color-variant-2: #bbe1fa;
