--- a/resources/sass/user/app.scss
+++ b/resources/sass/user/app.scss
@@ -13,6 +13,7 @@
 @import "component/address-result-list";
 @import "component/trovie-gallery-uploader";
 @import "component/trovie-avatar-upload";
+@import "component/drag-drop-menu-list";
 //Page
 @import "layout/master";
 @import "layout/sidebar";
