--- a/resources/sass/user/layout/_sidebar.scss
+++ b/resources/sass/user/layout/_sidebar.scss
@@ -17,6 +17,10 @@
         background: rgba(255, 255, 255, 0.7);
     }
 
+    &.admin-sidebar{
+        top: 0;
+        height: 48px;
+    }
     .main-sidebar__item {
         @include Responsive(LG) {
             flex: 1 1 auto;
