--- a/public/user/css/app.css
+++ b/public/user/css/app.css
@@ -638,6 +638,7 @@ a:hover {
   display: block;
   padding: 1rem;
   height: 100%;
+  border-radius: 16px;
 }
 
 @media only screen and (max-width: 576px) {
