--- a/resources/sass/frontend/component/_room-card.scss
+++ b/resources/sass/frontend/component/_room-card.scss
@@ -10,6 +10,7 @@ $room_breakpoint: SM;
 
     &:hover {
         @extend .shadow-sm;
+
         .room-card__image {
             @include ResponsiveMin(LG) {
                 img {
@@ -21,7 +22,7 @@ $room_breakpoint: SM;
 
     &:not(.room-card--horizon) {
         @include ResponsiveMin(LG) {
-            .room-card__image{
+            .room-card__image {
                 height: 12rem;
             }
         }
@@ -49,7 +50,19 @@ $room_breakpoint: SM;
             object-fit: cover;
 
         }
+    }
 
+    &__follow {
+        position: absolute;
+        top: 1rem;
+        left: 1.5rem;
+        display: block;
+        z-index: 99;
+
+        .fa{
+            margin: 0;
+            font-size: 1.75em;
+        }
     }
 
     &__body {
