--- a/resources/sass/user/component/_room-card.scss
+++ b/resources/sass/user/component/_room-card.scss
@@ -214,6 +214,14 @@ $room_breakpoint: SM;
             }
         }
 
+        &:not(.room-card--horizon) {
+            @include ResponsiveMin(LG) {
+                .room-card__image {
+                    height: 12rem;
+                }
+            }
+        }
+
         .fa {
             color: var(--color-base);
             font-weight: bold;
@@ -238,6 +246,19 @@ $room_breakpoint: SM;
             }
         }
 
+        &__follow {
+            position: absolute;
+            top: 1rem;
+            left: 1.5rem;
+            display: block;
+            z-index: 99;
+
+            .fa{
+                margin: 0;
+                font-size: 1.75em;
+            }
+        }
+
         &__body {
             padding-top: .5rem;
         }
@@ -254,14 +275,13 @@ $room_breakpoint: SM;
             @extend %transition-section-item-fast;
 
             &:hover {
-                color: var(--color-variant-3) !important;
+                color: var(--color-variant-3);
             }
         }
 
         &__address {
             padding: 0 .5rem;
             margin-bottom: .5rem;
-            color: var(--color-variant-3);
             @extend .line-clamp;
             @include lineClamp(1);
         }
@@ -277,7 +297,6 @@ $room_breakpoint: SM;
                 flex: 0 0 50%;
                 padding: .5rem .25rem .5rem .5rem;
                 border-top: 1px solid lightgray;
-                color: var(--color-variant-3);
 
 
                 &:nth-child(2n) {
@@ -290,6 +309,10 @@ $room_breakpoint: SM;
                         color: var(--color-base);
                         font-weight: bold;
                     }
+                }
+
+                &--acreage {
+                    flex: 1 1 auto;
                 }
             }
         }
