--- a/resources/sass/frontend/layout/_index.scss
+++ b/resources/sass/frontend/layout/_index.scss
@@ -1,7 +1,7 @@
 .page-banner {
     height: 28rem;
     background-repeat: no-repeat;
-    background-size: auto;
+    background-size: cover;
     background-position: center center;
     position: relative;
     display: flex;
